<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gnosis</string>
    <string name="main_title">Welcome to Gnosis</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="games_label">Games</string>
    <string name="about_label">About</string>
    <string name="bible_label">Bible</string>
    <string name="settings_label">Preferences</string>
    <string name="video_label">Videos</string>

    <color name="gummi_red">#FC1501</color>
    <color name="blue">#0000FF</color>
    <color name="white">#FFFFFF</color>

    <string name="about_text">\
Gnosis is a Bible Trivia Application which tests comprehension of biblical knowledge.
Create a profile, start a quiz, and track your progress of Bible understanding. You 
can even play games as well! The more you play the more <b><i>Gnosis!</i></b></string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="settings_title">Gnosis settings</string>
    <string name="settings_shortcut">s</string>
    <string name="title_activity_games">Games</string>
    <string name="title_activity_frog_main">Frog Jumper</string>
    <string name="frog_label">Frog Jumper</string>
    <string name="play_button">Play</string>
    <string name="frog_scores_button">Scores</string>
    <string name="back_button">Back</string>
    <string name="frog_game_title">Frog Game</string>
    <string name="title_activity_bible_chapters">BibleChapters</string>
    <string name="title_activity_bible_view_page">BibleViewPage</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_games_menu">Games</string>
    <string name="ski_label">Downhill Skier</string>
    <string name="title_activity_video_screen">VideoScreen</string>
    <string name="title_activity_bible_book_menu">BibleBookMenu</string>
    <string name="title_activity_frog_game_main">FrogGameMain</string>
    <string name="title_activity_frog_game">FrogGame</string>
    <string name="ski_game_title">Downhill Skier</string>
    <string name="title_activity_ski_game_main">SkiGameMain</string>

</resources>
