<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:padding="25dip" >
    
    <!--  android:background="@color/gummi_red" -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dip"
        android:gravity="center"
        android:text="@string/games_label"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/frog_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/red_button"
        android:gravity="center"
        android:text="@string/frog_label"
        android:textSize="30sp" />
    
    <Button
        android:id="@+id/ski_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/red_button"
        android:gravity="center"
        android:text="@string/ski_label"
        android:textSize="30sp" />

</LinearLayout>
