<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="25dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SkiGameMain" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dip"
        android:gravity="center"
        android:text="@string/ski_game_title"
        android:textColor="@color/blue"
        android:textSize="30sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/ski_play_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/blue_button"
        android:gravity="center"
        android:text="@string/play_button"
        android:textSize="30sp" />

    <Button
        android:id="@+id/ski_back_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/blue_button"
        android:gravity="center"
        android:text="@string/back_button"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/ski_scores_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:id="@+id/ski_scores_tablelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </TableLayout>
    </ScrollView>

</LinearLayout>
